[gd_scene load_steps=5 format=3 uid="uid://by5aaydcp21qc"]

[ext_resource type="Script" path="res://scripts/sistema_de_fuegos_artificiales.gd" id="1_7mfwc"]
[ext_resource type="Script" path="res://scripts/explosion.gd" id="1_86pxy"]
[ext_resource type="AudioStream" uid="uid://c4777ctj3fg3m" path="res://recursos/fx/RocketSound.wav" id="4_8ydoy"]
[ext_resource type="AudioStream" uid="uid://82vbejkkqodp" path="res://recursos/fx/Explosion.wav" id="5_k6gsw"]

[node name="SistemaDeFuegosArtificiales" type="Node2D"]
script = ExtResource("1_7mfwc")

[node name="LanzamientoFuegos" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="luncher" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8ydoy")

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_k6gsw")

[node name="explosion" type="Timer" parent="."]
wait_time = 2.1
autostart = true

[node name="rocket" type="Sprite2D" parent="."]

[node name="explosion2" type="CPUParticles2D" parent="rocket"]
position = Vector2(0, -8)
emitting = false
amount = 300
lifetime = 2.0
one_shot = true
explosiveness = 0.95
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 250.0
damping_min = 20.0
damping_max = 20.0
script = ExtResource("1_86pxy")

[connection signal="timeout" from="LanzamientoFuegos" to="." method="_on_lanzamiento_fuegos_timeout"]
[connection signal="timeout" from="explosion" to="." method="_on_explosion_timeout"]
